# masquerade

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  env.yml  mask_descriptions.csv  ont_vs_illumina_snp_density.csv  ont_vs_illumina_snp_density_labelled.csv  pyproject.toml
.github/workflows/: build_and_push_container.yml
blast/: .gitignore  blast_to_mask.py  blastn.sh  seek_site.py  self_blast.mask
created_masks/: masquerade_std_tb.mask  masquerade_std_tb_plus.mask
dust/: dust_20.mask  dust_to_mask.py  dustmasker.sh
existing_masks/: minor_alleles.txt
existing_masks/Compass/: compass.mask  peto_mask_to_list.py
existing_masks/MAGMA/: convert_to_mask.py  magma.mask  uvp.mask
existing_masks/MHall/: mhall.mask  mhall_bed_to_list.py
existing_masks/Marin/: .gitignore  make_marin_tables.py
existing_masks/Modlin/: .gitignore  mask_mask.py
existing_masks/TBSeqPipe/: convert_to_mask.py  tbseqpipe.mask
existing_masks/mix_infect2/: MaskedRegions.csv  ppe.mask  (+4 more)
from_gff/: mask_from_gff.py  ppe_pe.mask  regions.tsv  repeat_regions.mask
genmap/: .gitignore  create_mask.py  run.sh
mummer/: .gitignore  just_tandems.mask  mummer.mask  mummer.sh  mummer_to_mask.py
ncbi_annotation_pipeline/: .gitignore  README.md  mask_from_gff.py  ncbi.mask
repeat_masker/: .gitignore  README.md  all_repeats.mask  mask_from_gff.py  repeat_families.mask
simulated_reads/: .gitignore  find_overlaps.py  mask_size_summary.csv  parameter_grid_search.sh  run.sh  simulate.py  simulated.mask
snp_investigations/: investigate_snps.py  investigate_snps.sh
(+6 files in other folders)
